--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,13 @@
         "php": "^8.2",
         "filament/filament": "^3.3",
         "laravel/framework": "^12.0",
+        "laravel/telescope": "^5.7",
         "laravel/tinker": "^2.10.1",
         "livewire/flux": "^2.1.1",
         "livewire/volt": "^1.7.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.15",
         "fakerphp/faker": "^1.23",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.18",
