--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "require": {
         "php": "^8.2",
         "filament/filament": "^3.3",
+        "filament/spatie-laravel-tags-plugin": "^3.2",
         "laravel/framework": "^12.0",
         "laravel/telescope": "^5.7",
         "laravel/tinker": "^2.10.1",
